fix: fix button text color on iOS

--- a/styles/Resume.module.scss
+++ b/styles/Resume.module.scss
@@ -2,4 +2,5 @@
   font-size: 14px;
   padding: 0.5rem 1.5rem !important;
   margin: 2px;
+  color: #000 !important;
 }
